# roofitutils

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  RooFitUtilsConfig.cmake.in  setup.sh
RooFitUtils/: AbsMeasurement.h  Channel.h  CombinedMeasurement.h  CorrelationScheme.h  EditWorkspaces.h  ExtendedMinimizer.h  ExtendedModel.h  Log.h  Measurement.h  ParametrisationScheme.h  ParametrisationSequence.h  RenamingMap.h  RooCustomizerEnhanced.h  Utils.h  WildcardList.h
Root/: AbsMeasurement.cxx  Channel.cxx  CombinedMeasurement.cxx  CorrelationScheme.cxx  EditNuisanceParameters.cxx  EditWorkspaces.cxx  ExtendedMinimizer.cxx  ExtendedModel.cxx  LinkDef.h  Log.cxx  Measurement.cxx  ParametrisationScheme.cxx  ParametrisationSequence.cxx  RenamingMap.cxx  RooCustomizerEnhanced.cxx  RooFitUtils.cxx  RooFitUtils.h  Utils.cxx
cmake/: ASG.cmake  standalone.cmake  testing.cmake
cmt/: Makefile.RootCore  Makefile.standalone  precompile.RootCore
python/: __init__.py  csvwriter.py  fit.py  hepdatawriter.py  interpolate.py  io.py  logfile_diagnostics.py  logfile_parser.py  more_itertools.py  pgfplotter.py  statchallenges.py  util.py
scripts/: combine.py  convertresult.py  createAsimov.py  fit.py  getpip.sh  guessCorrelations.py  hs3tographml.py  json-roofit2pyhf.py  json2ws.py  logdoc.py  make_dummy.py  make_mvg.py  order_NPs.py  plotcorrelation.py  plothistograms.py  plotpois.py  plotpulls.py  plotscan.py  print-wsargs.py  printthresholds.py  prune_NPs.py  pyhf-validate.py  reparametrize.py  split.py  svg2json.py  unparametrize.py  ws2json.py  wsdiff.py
share/: README.RootCore  combine.py  createAsimov.py  editws.cc  guessCorrelations.py  npsplit.cc  split.py  wsdiff.py
test/: atlas_hgamgam.cfg  editws_test.C  test_impacts.sh  test_logdoc.sh  test_prune.sh  test_refinescan.sh  test_script.sh  test_simplefit.sh  test_simplescan.sh  test_simplescan2d.sh  test_workspace.root  testfit_mvg.py  testscript.sh
test/models/: MSSMbase.txt  kukdkv.txt
util/: fit.cxx  runMuhatQuick.cxx
